Fix whitespace around project links

--- a/src/projects/projects.scss
+++ b/src/projects/projects.scss
@@ -55,7 +55,6 @@
 .projects__link {
   @extend .link-reset;
   color: $accent;
-  margin: 0 7px;
   text-decoration: none;
 }
 .projects__link:hover {
